Advantages & fix bg img

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,4 @@
 @import "src/scss/base/_variable.scss";
 @import "src/scss/blocks/_promo.scss";
 @import "src/scss/blocks/_header.scss";
+@import "src/scss/blocks/_advantages.scss";
