--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,3 +15,7 @@
 @import "src/scss/blocks/_promo.scss";
 @import "src/scss/blocks/_header.scss";
 @import "src/scss/blocks/_advantages.scss";
+@import "src/scss/blocks/_consultation.scss";
+@import "src/scss/blocks/_forms.scss";
+@import "src/scss/blocks/_carousel.scss";
+@import "src/scss/blocks/_catalog.scss";
