--- a/src/scss/blocks/_text_descr.scss
+++ b/src/scss/blocks/_text_descr.scss
@@ -10,7 +10,7 @@
             color: $color-red;
         }
     }
-    &_catalog{
+    &__catalog{
         margin-top: 15px;
         width: 250px;
         font-size: 14px;
