--- a/src/scss/blocks/_text_title.scss
+++ b/src/scss/blocks/_text_title.scss
@@ -7,7 +7,7 @@
     &_advantages{
         margin-top: 35px;
     }
-    &_catalog{
+    &__catalog{
         margin-top: 15px;
         font-size: 16px;
     }
