--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,4 +18,4 @@
 @import "src/scss/blocks/_consultation.scss";
 @import "src/scss/blocks/_forms.scss";
 @import "src/scss/blocks/_carousel.scss";
-@import "src/scss/blocks/_catalog.scss";
+@import "src/scss/blocks/_catalog";
