--- a/src/scss/blocks/_text_title.scss
+++ b/src/scss/blocks/_text_title.scss
@@ -11,4 +11,9 @@
         margin-top: 15px;
         font-size: 16px;
     }
+    &__reviews{
+        margin: 0;
+        padding: 0;
+        text-align: left;
+    }
 }
