--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,3 +19,5 @@
 @import "src/scss/blocks/_forms.scss";
 @import "src/scss/blocks/_carousel.scss";
 @import "src/scss/blocks/_catalog";
+@import "src/scss/blocks/_reviews";
+@import "src/scss/blocks/_footer";
