--- a/src/scss/blocks/_text_descr.scss
+++ b/src/scss/blocks/_text_descr.scss
@@ -18,4 +18,12 @@
         text-align: center;
         color: #0D0D0D;
     }
+    &__reviews{
+        margin-top: 10px;
+        text-align: left;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 24px;
+        color: #0D0D0D;
+    }
 }
