Add modal forms

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,3 +21,4 @@
 @import "src/scss/blocks/_catalog";
 @import "src/scss/blocks/_reviews";
 @import "src/scss/blocks/_footer";
+@import "src/scss/blocks/modal";
