--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 
 @import "src/scss/base/_mixins.scss";
 @import "src/scss/base/_variable.scss";
+@import "src/scss/base/_animations.scss";
 @import "src/scss/blocks/_promo.scss";
 @import "src/scss/blocks/_header.scss";
 @import "src/scss/blocks/_advantages.scss";
@@ -22,3 +23,4 @@
 @import "src/scss/blocks/_reviews";
 @import "src/scss/blocks/_footer";
 @import "src/scss/blocks/modal";
+@import "src/scss/blocks/pageup";
