--- a/src/scss/blocks/_advantages.scss
+++ b/src/scss/blocks/_advantages.scss
@@ -15,6 +15,10 @@
     &__icon{
         max-width: 70px;
         max-height: 70px;
+        &_animated{
+            animation: heartbeat 0.5s ease-in-out infinite; 
+            animation-iteration-count: infinite;
+        }
     }
     &__item{
        display: flex;
