--- a/src/scss/blocks/_catalog.scss
+++ b/src/scss/blocks/_catalog.scss
@@ -53,6 +53,8 @@
         padding: 20px 20px 26px 20px;
         overflow: hidden;
         margin-bottom: 20px;
+        &_hidden{
+        }
         &__img {
             display: block;
             margin: 0 auto;
