--- a/src/scss/blocks/_consultation.scss
+++ b/src/scss/blocks/_consultation.scss
@@ -8,6 +8,16 @@
         font-size: 20px;
         font-weight: 500;
     }
+    .error{
+        border: 1px solid $color-red;
+        text-align: center;
+    }
+    label.error{
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+        color: #FFFFFF;
+    }
 }
 
 @import "button";
